<resources>
    <string name="app_name">移动消防安全防火</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ptz_control">PTZ</string>
    <string name="ptz_control_fragment_up">Up</string>
    <string name="ptz_control_fragment_down">Down</string>
    <string name="ptz_control_fragment_left">Left</string>
    <string name="ptz_control_fragment_right">Right</string>
    <string name="ptz_control_fragment_zoom_add">Zoom+</string>
    <string name="ptz_control_fragment_zoom_dec">Zoom-</string>
    <string name="ptz_control_fragment_focus_add">Focus+</string>
    <string name="ptz_control_fragment_focus_dec">Focus-</string>
    <string name="ptz_control_fragment_aperture_add">Iris+</string>
    <string name="ptz_control_fragment_aperture_dec">Iris-</string>
    <string name="ptz_control_fragment_setpreset">Set</string>
    <string name="ptz_control_fragment_clearpreset">Clear</string>
    <string name="ptz_control_fragment_gotopreset">Goto</string>
    <string name="ptz_control_fragment_preset">Preset ID:</string>
    <string name="ptz_control_fragment_info">PTZ support Sliding Operation, Zoom support two points Touch Operation</string>
    <string name="yes">OK</string>
    <string name="input_number">Please Input Number.</string>
    <string name="snap_picture_remote">Snap</string>
    <string name="snap_picture_local">LocalSnapPicture</string>
    <string name="encode">Encode</string>
    <string name="start_record">Record</string>
    <string name="des_right_image">Right</string>
    <string name="des_dialog_progress">Progress Dialog</string>
    <string name="device_disconnected">Your device has been disconnected, Logout and reconnect</string>
    <string name="error_code">ErrorCode</string>
    <string name="start_time_error">Failed to retrieve playback date</string>
    <string name="get_osd_time_failed">Get OSD Time Failed</string>
    <string name="get_encode_failed">Get encode information failed</string>
    <string name="real_play_failed">Confirm if the realplay is successful</string>
    <string name="fast_upper">Maximum fast forward has been reached</string>
    <string name="slow_lower">Minimum slow rate has been reached</string>
    <string name="activity_iplogin_ip_empty">Please input ip address</string>
    <string name="activity_iplogin_port_empty">Please input port</string>
    <string name="activity_iplogin_username_empty">Please input username</string>
    <string name="activity_iplogin_password_empty">Please input password</string>
    <string name="activity_iplogin_device_ip">Device IP</string>
    <string name="activity_iplogin_device_port">Device Port</string>
    <string name="activity_iplogin_username">Username</string>
    <string name="activity_iplogin_password">Password</string>
    <string name="activity_iplogin_port_err">Please check input device port</string>
    <string name="activity_iplogin_login_success">Login device success</string>
    <string name="activity_iplogin_login_failed">Login device failed</string>
    <string name="NET_NOERROR">No error</string>
    <string name="NET_ERROR">Unknown error</string>
    <string name="NET_SYSTEM_ERROR"> System error</string>
    <string name="NET_NETWORK_ERROR">Protocol error </string>
    <string name="NET_DEV_VER_NOMATCH">Device protocol does not match</string>
    <string name="NET_INVALID_HANDLE">Handle is invalid</string>
    <string name="NET_OPEN_CHANNEL_ERROR">Failed to open channel</string>
    <string name="NET_CLOSE_CHANNEL_ERROR">Failed to close channel</string>
    <string name="NET_ILLEGAL_PARAM">User parameter is illegal</string>
    <string name="NET_SDK_INIT_ERROR">SDK initialization error</string>
    <string name="NET_SDK_UNINIT_ERROR">SDK clear error</string>
    <string name="NET_RENDER_OPEN_ERROR">Error occurs when apply for render resources.</string>
    <string name="NET_DEC_OPEN_ERROR">Error occurs when opening the decoder library</string>
    <string name="NET_DEC_CLOSE_ERROR">Error occurs when closing the decoder library</string>
    <string name="NET_MULTIPLAY_NOCHANNEL">The detected channel number is 0</string>
    <string name="NET_TALK_INIT_ERROR">Failed to initialize record library</string>
    <string name="NET_TALK_NOT_INIT">The record library has not been initialized</string>
    <string name="NET_TALK_SENDDATA_ERROR">Error occurs when sending out audio data</string>
    <string name="NET_REAL_ALREADY_SAVING">The real-time has been protected.</string>
    <string name="NET_NOT_SAVING">The real-time data has not been save.</string>
    <string name="NET_OPEN_FILE_ERROR">Error occurs when opening the file.</string>
    <string name="NET_PTZ_SET_TIMER_ERROR">Failed to enable PTZ to control timer.</string>
    <string name="NET_RETURN_DATA_ERROR">Error occurs when verify returned data.</string>
    <string name="NET_INSUFFICIENT_BUFFER">There is no sufficient buffer.</string>
    <string name="NET_NOT_SUPPORTED">The current SDK does not support this function.</string>
    <string name="NET_NO_RECORD_FOUND">There is no searched result.</string>
    <string name="NET_NOT_AUTHORIZED">You have no operation right.</string>
    <string name="NET_NOT_NOW">Can not operate right now.</string>
    <string name="NET_NO_TALK_CHANNEL">There is no audio talk channel.</string>
    <string name="NET_NO_AUDIO">There is no audio.</string>
    <string name="NET_NO_INIT">The network SDK has not been initialized.</string>
    <string name="NET_DOWNLOAD_END">The download completed.</string>
    <string name="NET_EMPTY_LIST">There is no searched result.</string>
    <string name="NET_ERROR_GETCFG_SYSATTR">Failed to get system property setup.</string>
    <string name="NET_ERROR_GETCFG_SERIAL">Failed to get SN.</string>
    <string name="NET_ERROR_GETCFG_GENERAL">Failed to get general property.</string>
    <string name="NET_ERROR_GETCFG_DSPCAP">Failed to get DSP capacity description.</string>
    <string name="NET_ERROR_GETCFG_NETCFG">Failed to get network channel setup.</string>
    <string name="NET_ERROR_GETCFG_CHANNAME">Failed to get channel name.</string>
    <string name="NET_ERROR_GETCFG_VIDEO">Failed to get video property.</string>
    <string name="NET_ERROR_GETCFG_RECORD">Failed to get record setup</string>
    <string name="NET_ERROR_GETCFG_PRONAME">Failed to get decoder protocol name</string>
    <string name="NET_ERROR_GETCFG_FUNCNAME">Failed to get 232 COM function name.</string>
    <string name="NET_ERROR_GETCFG_485DECODER">Failed to get decoder property</string>
    <string name="NET_ERROR_GETCFG_232COM">Failed to get 232 COM setup</string>
    <string name="NET_ERROR_GETCFG_ALARMIN">Failed to get external alarm input setup</string>
    <string name="NET_ERROR_GETCFG_ALARMDET">Failed to get motion detection alarm</string>
    <string name="NET_ERROR_GETCFG_SYSTIME">Failed to get device time</string>
    <string name="NET_ERROR_GETCFG_PREVIEW">Failed to get preview parameter</string>
    <string name="NET_ERROR_GETCFG_AUTOMT">Failed to get audio maintenance setup</string>
    <string name="NET_ERROR_GETCFG_VIDEOMTRX">Failed to get video matrix setup</string>
    <string name="NET_ERROR_GETCFG_COVER">Failed to get privacy mask zone setup</string>
    <string name="NET_ERROR_GETCFG_WATERMAKE">Failed to get video watermark setup</string>
    <string name="NET_ERROR_GETCFG_MULTICAST">Failed to get config multi cast port by channel</string>
    <string name="NET_ERROR_SETCFG_GENERAL">Failed to modify general property</string>
    <string name="NET_ERROR_SETCFG_NETCFG">Failed to modify channel setup</string>
    <string name="NET_ERROR_SETCFG_CHANNAME">Failed to modify channel name</string>
    <string name="NET_ERROR_SETCFG_VIDEO">Failed to modify video channel</string>
    <string name="NET_ERROR_SETCFG_RECORD">Failed to modify record setup</string>
    <string name="NET_ERROR_SETCFG_485DECODER">Failed to modify decoder property</string>
    <string name="NET_ERROR_SETCFG_232COM">Failed to modify 232 COM setup</string>
    <string name="NET_ERROR_SETCFG_ALARMIN">Failed to modify external input alarm setup</string>
    <string name="NET_ERROR_SETCFG_ALARMDET">Failed to modify motion detection alarm setup</string>
    <string name="NET_ERROR_SETCFG_SYSTIME">Failed to modify device time</string>
    <string name="NET_ERROR_SETCFG_PREVIEW">Failed to modify preview parameter</string>
    <string name="NET_ERROR_SETCFG_AUTOMT">Failed to modify auto maintenance setup</string>
    <string name="NET_ERROR_SETCFG_VIDEOMTRX">Failed to modify video matrix setup</string>
    <string name="NET_ERROR_SETCFG_COVER">Failed to modify privacy mask zone</string>
    <string name="NET_ERROR_SETCFG_WATERMAKE">Failed to modify video watermark setup</string>
    <string name="NET_ERROR_SETCFG_WLAN">Failed to modify wireless network information</string>
    <string name="NET_ERROR_SETCFG_WLANDEV">Failed to select wireless network device</string>
    <string name="NET_ERROR_SETCFG_REGISTER">Failed to modify the actively registration parameter setup.</string>
    <string name="NET_ERROR_SETCFG_CAMERA">Failed to modify camera property</string>
    <string name="NET_ERROR_SETCFG_INFRARED">Failed to modify IR alarm setup</string>
    <string name="NET_ERROR_SETCFG_SOUNDALARM">Failed to modify audio alarm setup</string>
    <string name="NET_ERROR_SETCFG_STORAGE">Failed to modify storage position setup</string>
    <string name="NET_AUDIOENCODE_NOTINIT">The audio encode port has not been successfully initialized.</string>
    <string name="NET_DATA_TOOLONGH">The data are too long.</string>
    <string name="NET_UNSUPPORTED">The device does not support current operation.</string>
    <string name="NET_DEVICE_BUSY">Device resources is not sufficient.</string>
    <string name="NET_SERVER_STARTED">The server has boot up</string>
    <string name="NET_SERVER_STOPPED">The server has not fully boot up</string>
    <string name="NET_LISTER_INCORRECT_SERIAL">Input serial number is not correct.</string>
    <string name="NET_QUERY_DISKINFO_FAILED">Failed to get HDD information.</string>
    <string name="NET_ERROR_GETCFG_SESSION">Failed to get connect session information.</string>
    <string name="NET_USER_FLASEPWD_TRYTIME">The password you typed is incorrect. </string>
    <string name="NET_LOGIN_ERROR_PASSWORD">Password is not correct</string>
    <string name="NET_LOGIN_ERROR_USER">The account does not exist</string>
    <string name="NET_LOGIN_ERROR_TIMEOUT">Time out for log in returned value.</string>
    <string name="NET_LOGIN_ERROR_RELOGGIN">The account has logged in</string>
    <string name="NET_LOGIN_ERROR_LOCKED">The account has been locked</string>
    <string name="NET_LOGIN_ERROR_BLACKLIST">The account has been in the black list</string>
    <string name="NET_LOGIN_ERROR_BUSY">Resources are not sufficient. System is busy now.</string>
    <string name="NET_LOGIN_ERROR_CONNECT">Time out. Please check network and try again.</string>
    <string name="NET_LOGIN_ERROR_NETWORK">Network connection failed.</string>
    <string name="NET_LOGIN_ERROR_SUBCONNECT">Successfully logged in the device but can not create video channel.</string>
    <string name="NET_LOGIN_ERROR_MAXCONNECT">Exceed the max connect number</string>
    <string name="NET_LOGIN_ERROR_PROTOCOL3_ONLY">Protocol 3 support</string>
    <string name="NET_LOGIN_ERROR_UKEY_LOST">There is no USB or USB info error</string>
    <string name="NET_LOGIN_ERROR_NO_AUTHORIZED">Client-end IP address has no right to login</string>
    <string name="NET_RENDER_SOUND_ON_ERROR">Error occurs when Render library open audio.</string>
    <string name="compress_format">Encode Setting</string>
    <string name="resolve_ratio">Resolution</string>
    <string name="frame_rate">Frame Rate(FPS)</string>
    <string name="bit_stream">Bit Rate</string>
    <string name="setting">Setting</string>
</resources>