<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:weightSum="2"
        android:id="@+id/compress_linear"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/compress_format"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_weight="1"
            android:id="@+id/compress_fromat_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeHoloLight"/>
    </LinearLayout>
    <LinearLayout
        android:weightSum="2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/compress_linear"
        android:id="@+id/resolve_linear"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/resolve_ratio"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_weight="1"
            android:id="@+id/resolve_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeHoloLight"/>
    </LinearLayout>
    <LinearLayout
        android:weightSum="2"
        android:layout_marginTop="10dp"
        android:id="@+id/frame_rate_linear"
        android:layout_below="@+id/resolve_linear"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/frame_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_weight="1"
            android:id="@+id/frame_rate_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeHoloLight"/>
    </LinearLayout>
    <LinearLayout
        android:weightSum="2"
        android:id="@+id/bit_stream_linear"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/frame_rate_linear"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/bit_stream"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_weight="1"
            android:id="@+id/bit_rate_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeHoloLight"/>
    </LinearLayout>
    <Button
        android:textAllCaps="false"
        android:text="@string/setting"
        android:layout_centerInParent="true"
        android:id="@+id/encode_setting_config_btn"
        android:layout_below="@+id/bit_stream_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"/>
</RelativeLayout>