<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/yout_r"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/text_blue" >

        <RelativeLayout
            android:id="@+id/r_back"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:background="@color/text_blue" >

            <ImageView
                android:id="@+id/tl_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/back_icon" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="视频监控"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/selector_continer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:weightSum="2" >

        <Spinner
            android:id="@+id/select_channel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:theme="@style/ThemeHoloLight" />

        <Spinner
            android:id="@+id/select_stream_type"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:theme="@style/ThemeHoloLight" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/yout_r"
        android:orientation="vertical" >

        <SurfaceView
            android:id="@+id/real_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ptz_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:paddingBottom="6dp"
        android:paddingTop="10dp"
        android:visibility="gone" >

        <Button
            android:id="@+id/preview_focus_add"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/ptz_control_fragment_focus_add"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/preview_focus_dec"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/preview_aperture_add"
            android:layout_toRightOf="@+id/preview_aperture_add"
            android:text="@string/ptz_control_fragment_focus_dec"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/preview_aperture_add"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/preview_focus_add"
            android:text="@string/ptz_control_fragment_aperture_add"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/preview_aperture_dec"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/preview_aperture_add"
            android:layout_toEndOf="@+id/preview_aperture_add"
            android:layout_toRightOf="@+id/preview_aperture_add"
            android:text="@string/ptz_control_fragment_aperture_dec"
            android:textAllCaps="false" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/preview_clearpreset"
            android:layout_toEndOf="@+id/textView9"
            android:layout_toRightOf="@+id/textView9"
            android:fillViewport="true" >

            <EditText
                android:id="@+id/edittext_preset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1" >

                <requestFocus />
            </EditText>
        </ScrollView>

        <Button
            android:id="@+id/preview_setpreset"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/preview_gotopreset"
            android:layout_toLeftOf="@+id/preview_gotopreset"
            android:layout_toStartOf="@+id/preview_gotopreset"
            android:text="+"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/preview_gotopreset"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/preview_aperture_dec"
            android:layout_toLeftOf="@+id/preview_clearpreset"
            android:layout_toStartOf="@+id/preview_clearpreset"
            android:text="@string/ptz_control_fragment_gotopreset"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/preview_clearpreset"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/preview_gotopreset"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="-"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/preview_setpreset"
            android:layout_alignLeft="@+id/preview_setpreset"
            android:layout_alignStart="@+id/preview_setpreset"
            android:text="@string/ptz_control_fragment_preset"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>